--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,8 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.filters{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:12px;}
+.filters{display:flex;flex-wrap:wrap;gap:12px;margin-bottom:12px;}
+.filters select{width:auto;}
 @media print{
   body{background:white;}
   header,.filters,.btn{display:none !important;}
@@ -28,25 +29,6 @@ th{background:#004aad;color:#fff;}
 <header>نظام OMA - إدارة الحصص</header>
 <div class="wrap">
 
-<!-- فلترة الحصص -->
-<div class="card filters">
-  <strong>فلترة الحصص</strong>
-  <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:8px">
-    <select id="filterSubject"><option value="">كل المواد</option></select>
-    <select id="filterTeacher"><option value="">كل الأساتذة</option></select>
-    <input type="text" id="filterGroup" placeholder="البحث حسب الكروب">
-    <select id="filterDay">
-      <option value="">كل الأيام</option>
-      <option value="الاثنين">الاثنين</option>
-      <option value="الثلاثاء">الثلاثاء</option>
-      <option value="الأربعاء">الأربعاء</option>
-      <option value="الخميس">الخميس</option>
-      <option value="الجمعة">الجمعة</option>
-    </select>
-    <button id="printBtn" class="btn">🖨️ طباعة</button>
-  </div>
-</div>
-
 <!-- نموذج إضافة حصة -->
 <div class="card">
   <strong>أضف حصة جديدة</strong>
@@ -55,6 +37,8 @@ th{background:#004aad;color:#fff;}
     <select id="subjectSelect" required></select>
     <label>الأستاذ</label>
     <select id="teacherSelect" required></select>
+    <label>القاعة</label>
+    <input id="roomInput" type="text" placeholder="مثال: A1 أو B2" required>
     <label>المجموعة / الكروب</label>
     <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
     <label>اليوم</label>
@@ -71,6 +55,15 @@ th{background:#004aad;color:#fff;}
   </form>
 </div>
 
+<!-- فلاتر الحصص -->
+<div class="filters">
+  <select id="filterSubject"><option value="">كل المواد</option></select>
+  <select id="filterTeacher"><option value="">كل الأساتذة</option></select>
+  <select id="filterGroup"><option value="">كل المجموعات</option></select>
+  <select id="filterRoom"><option value="">كل القاعات</option></select>
+  <select id="filterDay"><option value="">كل الأيام</option></select>
+</div>
+
 <!-- جدول الحصص -->
 <div class="card">
   <strong>قائمة الحصص</strong>
@@ -79,6 +72,7 @@ th{background:#004aad;color:#fff;}
       <tr>
         <th>المادة</th>
         <th>الأستاذ</th>
+        <th>القاعه</th>
         <th>المجموعة</th>
         <th>اليوم</th>
         <th>الوقت</th>
@@ -91,8 +85,8 @@ th{background:#004aad;color:#fff;}
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
@@ -104,74 +98,82 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
 const auth = getAuth(app);
-
-onAuthStateChanged(auth, user=>{
-  if(!user) window.location.href="login.html";
-  else loadFilters();
-});
+const db = getFirestore(app);
 
 const classForm = document.getElementById("classForm");
 const subjectSelect = document.getElementById("subjectSelect");
 const teacherSelect = document.getElementById("teacherSelect");
+const roomInput = document.getElementById("roomInput");
+const groupInput = document.getElementById("groupInput");
+const daySelect = document.getElementById("daySelect");
+const timeInput = document.getElementById("timeInput");
 const classesTableBody = document.querySelector("#classesTable tbody");
 
 const filterSubject = document.getElementById("filterSubject");
 const filterTeacher = document.getElementById("filterTeacher");
 const filterGroup = document.getElementById("filterGroup");
+const filterRoom = document.getElementById("filterRoom");
 const filterDay = document.getElementById("filterDay");
-const printBtn = document.getElementById("printBtn");
 
-let teachersMap = {};
-let subjectsSet = new Set();
-let allClasses = [];
+let classesData = [];
+let subjectsList = [];
+let teachersList = [];
 
-// تحميل المواد والأساتذة
+onAuthStateChanged(auth, async (user)=>{
+  if(!user) window.location.href="login.html";
+  else{
+    document.body.style.visibility="visible";
+    await loadFilters();
+    await loadClasses();
+  }
+});
+
+// تحميل المواد والأساتذة والفلاتر
 async function loadFilters(){
-  // المواد من الطلاب
   const studentsSnap = await getDocs(collection(db,"students"));
-  subjectsSet.clear();
+  const subjectsSet = new Set();
   studentsSnap.forEach(snap => snap.data().subjects.forEach(sub => subjectsSet.add(sub.name)));
-  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
-  filterSubject.innerHTML="<option value=''>كل المواد</option>";
-  subjectsSet.forEach(sub=>{
+  subjectsList = Array.from(subjectsSet);
+  subjectSelect.innerHTML = "<option value=''>اختر المادة</option>";
+  filterSubject.innerHTML = "<option value=''>كل المواد</option>";
+  subjectsList.forEach(sub => {
     subjectSelect.innerHTML += `<option value="${sub}">${sub}</option>`;
     filterSubject.innerHTML += `<option value="${sub}">${sub}</option>`;
   });
 
-  // الأساتذة
   const teachersSnap = await getDocs(collection(db,"teachers"));
-  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
-  filterTeacher.innerHTML="<option value=''>كل الأساتذة</option>";
-  teachersMap = {};
-  teachersSnap.forEach(snap=>{
+  teachersList = [];
+  teacherSelect.innerHTML = "<option value=''>اختر الأستاذ</option>";
+  filterTeacher.innerHTML = "<option value=''>كل الأساتذة</option>";
+  teachersSnap.forEach(snap => {
     const t = snap.data();
-    teachersMap[snap.id] = t.name;
-    teacherSelect.innerHTML += `<option value="${snap.id}">${t.name}</option>`;
-    filterTeacher.innerHTML += `<option value="${snap.id}">${t.name}</option>`;
+    teachersList.push({id:snap.id,name:t.name});
+    teacherSelect.innerHTML += `<option value="${t.name}">${t.name}</option>`;
+    filterTeacher.innerHTML += `<option value="${t.name}">${t.name}</option>`;
   });
-
-  loadClasses();
 }
 
 // حفظ الحصة
 classForm.addEventListener("submit", async(e)=>{
   e.preventDefault();
   const subject = subjectSelect.value;
-  const teacherId = teacherSelect.value;
-  const group = document.getElementById("groupInput").value.trim();
-  const day = document.getElementById("daySelect").value;
-  const time = document.getElementById("timeInput").value;
+  const teacher = teacherSelect.value;
+  const room = roomInput.value.trim();
+  const group = groupInput.value.trim();
+  const day = daySelect.value;
+  const time = timeInput.value;
 
+  // جلب الطلاب من نفس الكروب
   const studentsSnap = await getDocs(collection(db,"students"));
   const groupStudents = [];
   studentsSnap.forEach(snap=>{
     const s = snap.data();
-    if(s.group === group) groupStudents.push({id: snap.id, name: s.name});
+    if(s.group===group) groupStudents.push({id:snap.id,name:s.name});
   });
 
-  await addDoc(collection(db,"classes"),{subjectId:subject,teacherId,group,day,time,students:groupStudents});
+  await addDoc(collection(db,"classes"),{subject,teacher,room,group,day,time,students:groupStudents});
+  alert("تم حفظ الحصة بنجاح");
   classForm.reset();
   loadClasses();
 });
@@ -179,46 +181,44 @@ classForm.addEventListener("submit", async(e)=>{
 // تحميل الحصص
 async function loadClasses(){
   const snapshot = await getDocs(collection(db,"classes"));
-  allClasses = [];
+  classesData = [];
+  classesTableBody.innerHTML="";
   snapshot.forEach(docSnap=>{
-    allClasses.push({...docSnap.data(),id:docSnap.id});
+    classesData.push({...docSnap.data(),id:docSnap.id});
   });
   applyFilters();
 }
 
 // تطبيق الفلاتر
 function applyFilters(){
-  const filtered = allClasses.filter(cls=>{
-    const subjectMatch = !filterSubject.value || cls.subjectId === filterSubject.value;
-    const teacherMatch = !filterTeacher.value || cls.teacherId === filterTeacher.value;
-    const groupMatch = !filterGroup.value || cls.group.includes(filterGroup.value.trim());
-    const dayMatch = !filterDay.value || cls.day === filterDay.value;
-    return subjectMatch && teacherMatch && groupMatch && dayMatch;
+  const s = filterSubject.value;
+  const t = filterTeacher.value;
+  const g = filterGroup.value;
+  const r = filterRoom.value;
+  const d = filterDay.value;
+  classesTableBody.innerHTML="";
+  classesData.forEach(cls=>{
+    if((!s || cls.subject===s) &&
+       (!t || cls.teacher===t) &&
+       (!g || cls.group===g) &&
+       (!r || cls.room===r) &&
+       (!d || cls.day===d)){
+         const tr=document.createElement("tr");
+         tr.innerHTML=`
+           <td>${cls.subject}</td>
+           <td>${cls.teacher}</td>
+           <td>${cls.room}</td>
+           <td>${cls.group}</td>
+           <td>${cls.day}</td>
+           <td>${cls.time}</td>
+           <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+         `;
+         classesTableBody.appendChild(tr);
+    }
   });
-  renderTable(filtered);
 }
 
-// عرض الجدول
-function renderTable(classes){
-  classesTableBody.innerHTML = "";
-  classes.forEach(cls=>{
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${cls.subjectId}</td>
-      <td>${teachersMap[cls.teacherId]||cls.teacherId}</td>
-      <td>${cls.group}</td>
-      <td>${cls.day}</td>
-      <td>${cls.time}</td>
-      <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
-    `;
-    classesTableBody.appendChild(tr);
-  });
-}
-
-// أحداث الفلاتر
-[filterSubject, filterTeacher, filterGroup, filterDay].forEach(el=>el.addEventListener("input",applyFilters));
-
-// حذف حصة
+// حذف الحصة
 window.deleteClass = async(id)=>{
   if(confirm("هل تريد حذف الحصة؟")){
     await deleteDoc(doc(db,"classes",id));
@@ -226,8 +226,10 @@ window.deleteClass = async(id)=>{
   }
 }
 
-// الطباعة
-printBtn.addEventListener("click",()=>window.print());
+// ربط الفلاتر
+[filterSubject, filterTeacher, filterGroup, filterRoom, filterDay].forEach(el=>{
+  el.addEventListener("input", applyFilters);
+});
 </script>
 </body>
 </html>
