--- a/classes.html
+++ b/classes.html
@@ -13,11 +13,11 @@ input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 .btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
 .btn.warn{background:#ff7043;}
+.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px;}
+.filters select{width:auto;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.filters{display:flex;flex-wrap:wrap;gap:12px;margin-bottom:12px;}
-.filters select{width:auto;}
 @media print{
   body{background:white;}
   header,.filters,.btn{display:none !important;}
@@ -37,8 +37,6 @@ th{background:#004aad;color:#fff;}
     <select id="subjectSelect" required></select>
     <label>الأستاذ</label>
     <select id="teacherSelect" required></select>
-    <label>القاعة</label>
-    <input id="roomInput" type="text" placeholder="مثال: A1 أو B2" required>
     <label>المجموعة / الكروب</label>
     <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
     <label>اليوم</label>
@@ -55,13 +53,15 @@ th{background:#004aad;color:#fff;}
   </form>
 </div>
 
-<!-- فلاتر الحصص -->
+<!-- فلاتر الطباعة -->
 <div class="filters">
-  <select id="filterSubject"><option value="">كل المواد</option></select>
-  <select id="filterTeacher"><option value="">كل الأساتذة</option></select>
-  <select id="filterGroup"><option value="">كل المجموعات</option></select>
-  <select id="filterRoom"><option value="">كل القاعات</option></select>
-  <select id="filterDay"><option value="">كل الأيام</option></select>
+  <select id="filterTeacher">
+    <option value="">فلتر حسب الأستاذ</option>
+  </select>
+  <select id="filterSubject">
+    <option value="">فلتر حسب المادة</option>
+  </select>
+  <input type="text" id="filterGroup" placeholder="فلتر حسب الكروب">
 </div>
 
 <!-- جدول الحصص -->
@@ -72,7 +72,6 @@ th{background:#004aad;color:#fff;}
       <tr>
         <th>المادة</th>
         <th>الأستاذ</th>
-        <th>القاعه</th>
         <th>المجموعة</th>
         <th>اليوم</th>
         <th>الوقت</th>
@@ -88,148 +87,112 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebas
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// إعداد Firebase
 const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma2-d36fa.firebaseapp.com",
+  projectId: "oma2-d36fa",
+  storageBucket: "oma2-d36fa.appspot.com",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
+// التحقق من تسجيل الدخول
+onAuthStateChanged(auth, user => {
+  if(!user){ window.location.href="login.html"; }
+  else{ document.body.style.visibility="visible"; loadSubjectsAndTeachers(); loadClasses(); }
+});
+
 const classForm = document.getElementById("classForm");
 const subjectSelect = document.getElementById("subjectSelect");
 const teacherSelect = document.getElementById("teacherSelect");
-const roomInput = document.getElementById("roomInput");
-const groupInput = document.getElementById("groupInput");
-const daySelect = document.getElementById("daySelect");
-const timeInput = document.getElementById("timeInput");
 const classesTableBody = document.querySelector("#classesTable tbody");
-
-const filterSubject = document.getElementById("filterSubject");
 const filterTeacher = document.getElementById("filterTeacher");
+const filterSubject = document.getElementById("filterSubject");
 const filterGroup = document.getElementById("filterGroup");
-const filterRoom = document.getElementById("filterRoom");
-const filterDay = document.getElementById("filterDay");
 
-let classesData = [];
-let subjectsList = [];
-let teachersList = [];
-
-onAuthStateChanged(auth, async (user)=>{
-  if(!user) window.location.href="login.html";
-  else{
-    document.body.style.visibility="visible";
-    await loadFilters();
-    await loadClasses();
-  }
-});
-
-// تحميل المواد والأساتذة والفلاتر
-async function loadFilters(){
+// تحميل المواد والأساتذة
+async function loadSubjectsAndTeachers(){
   const studentsSnap = await getDocs(collection(db,"students"));
   const subjectsSet = new Set();
   studentsSnap.forEach(snap => snap.data().subjects.forEach(sub => subjectsSet.add(sub.name)));
-  subjectsList = Array.from(subjectsSet);
-  subjectSelect.innerHTML = "<option value=''>اختر المادة</option>";
-  filterSubject.innerHTML = "<option value=''>كل المواد</option>";
-  subjectsList.forEach(sub => {
-    subjectSelect.innerHTML += `<option value="${sub}">${sub}</option>`;
-    filterSubject.innerHTML += `<option value="${sub}">${sub}</option>`;
+  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
+  filterSubject.innerHTML="<option value=''>فلتر حسب المادة</option>";
+  subjectsSet.forEach(s => {
+    subjectSelect.innerHTML+=`<option value="${s}">${s}</option>`;
+    filterSubject.innerHTML+=`<option value="${s}">${s}</option>`;
   });
 
   const teachersSnap = await getDocs(collection(db,"teachers"));
-  teachersList = [];
-  teacherSelect.innerHTML = "<option value=''>اختر الأستاذ</option>";
-  filterTeacher.innerHTML = "<option value=''>كل الأساتذة</option>";
+  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
+  filterTeacher.innerHTML="<option value=''>فلتر حسب الأستاذ</option>";
   teachersSnap.forEach(snap => {
     const t = snap.data();
-    teachersList.push({id:snap.id,name:t.name});
-    teacherSelect.innerHTML += `<option value="${t.name}">${t.name}</option>`;
-    filterTeacher.innerHTML += `<option value="${t.name}">${t.name}</option>`;
+    teacherSelect.innerHTML+=`<option value="${t.name}">${t.name}</option>`;
+    filterTeacher.innerHTML+=`<option value="${t.name}">${t.name}</option>`;
   });
 }
 
 // حفظ الحصة
-classForm.addEventListener("submit", async(e)=>{
+classForm.addEventListener("submit", async e=>{
   e.preventDefault();
   const subject = subjectSelect.value;
   const teacher = teacherSelect.value;
-  const room = roomInput.value.trim();
-  const group = groupInput.value.trim();
-  const day = daySelect.value;
-  const time = timeInput.value;
+  const group = document.getElementById("groupInput").value.trim();
+  const day = document.getElementById("daySelect").value;
+  const time = document.getElementById("timeInput").value;
 
-  // جلب الطلاب من نفس الكروب
   const studentsSnap = await getDocs(collection(db,"students"));
   const groupStudents = [];
   studentsSnap.forEach(snap=>{
     const s = snap.data();
-    if(s.group===group) groupStudents.push({id:snap.id,name:s.name});
+    if(s.group===group){ groupStudents.push({id:snap.id,name:s.name}); }
   });
 
-  await addDoc(collection(db,"classes"),{subject,teacher,room,group,day,time,students:groupStudents});
+  await addDoc(collection(db,"classes"),{subject,teacher,group,day,time,students:groupStudents,attendance:[]});
   alert("تم حفظ الحصة بنجاح");
   classForm.reset();
   loadClasses();
 });
 
-// تحميل الحصص
+// تحميل الحصص مع تطبيق الفلاتر
 async function loadClasses(){
   const snapshot = await getDocs(collection(db,"classes"));
-  classesData = [];
   classesTableBody.innerHTML="";
   snapshot.forEach(docSnap=>{
-    classesData.push({...docSnap.data(),id:docSnap.id});
-  });
-  applyFilters();
-}
-
-// تطبيق الفلاتر
-function applyFilters(){
-  const s = filterSubject.value;
-  const t = filterTeacher.value;
-  const g = filterGroup.value;
-  const r = filterRoom.value;
-  const d = filterDay.value;
-  classesTableBody.innerHTML="";
-  classesData.forEach(cls=>{
-    if((!s || cls.subject===s) &&
-       (!t || cls.teacher===t) &&
-       (!g || cls.group===g) &&
-       (!r || cls.room===r) &&
-       (!d || cls.day===d)){
-         const tr=document.createElement("tr");
-         tr.innerHTML=`
-           <td>${cls.subject}</td>
-           <td>${cls.teacher}</td>
-           <td>${cls.room}</td>
-           <td>${cls.group}</td>
-           <td>${cls.day}</td>
-           <td>${cls.time}</td>
-           <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
-         `;
-         classesTableBody.appendChild(tr);
-    }
+    const cls = {...docSnap.data(),id:docSnap.id};
+    if( (filterTeacher.value && cls.teacher!==filterTeacher.value) ) return;
+    if( (filterSubject.value && cls.subject!==filterSubject.value) ) return;
+    if( (filterGroup.value && !cls.group.includes(filterGroup.value)) ) return;
+    const tr = document.createElement("tr");
+    tr.innerHTML=`
+      <td>${cls.subject}</td>
+      <td>${cls.teacher}</td>
+      <td>${cls.group}</td>
+      <td>${cls.day}</td>
+      <td>${cls.time}</td>
+      <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+    `;
+    classesTableBody.appendChild(tr);
   });
 }
 
-// حذف الحصة
-window.deleteClass = async(id)=>{
+// حذف حصة
+window.deleteClass = async id=>{
   if(confirm("هل تريد حذف الحصة؟")){
     await deleteDoc(doc(db,"classes",id));
     loadClasses();
   }
 }
 
-// ربط الفلاتر
-[filterSubject, filterTeacher, filterGroup, filterRoom, filterDay].forEach(el=>{
-  el.addEventListener("input", applyFilters);
-});
+// تطبيق الفلاتر تلقائياً عند التغيير
+filterTeacher.addEventListener("change", loadClasses);
+filterSubject.addEventListener("change", loadClasses);
+filterGroup.addEventListener("input", loadClasses);
+
 </script>
 </body>
 </html>
