--- a/classes.html
+++ b/classes.html
@@ -18,9 +18,12 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
+.modal{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
+.modal.open{display:flex;}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;}
 @media print{
   body{background:white;}
-  header,.filters,.btn{display:none !important;}
+  header,.filters,.btn,.modal{display:none !important;}
   table{page-break-inside:avoid;}
 }
 </style>
@@ -29,9 +32,9 @@ th{background:#004aad;color:#fff;}
 <header>نظام OMA - إدارة الحصص</header>
 <div class="wrap">
 
-<!-- نموذج إضافة حصة -->
+<!-- نموذج إضافة/تعديل حصة -->
 <div class="card">
-  <strong>أضف حصة جديدة</strong>
+  <strong>أضف / عدل حصة</strong>
   <form id="classForm">
     <label>المادة</label>
     <select id="subjectSelect" required></select>
@@ -49,7 +52,9 @@ th{background:#004aad;color:#fff;}
     </select>
     <label>الوقت</label>
     <input id="timeInput" type="time" required>
+    <input type="hidden" id="editClassId">
     <button type="submit" class="btn">✅ حفظ الحصة</button>
+    <button type="button" id="cancelEditBtn" class="btn warn">إلغاء التعديل</button>
   </form>
 </div>
 
@@ -85,9 +90,8 @@ th{background:#004aad;color:#fff;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
   authDomain: "oma2-d36fa.firebaseapp.com",
@@ -113,6 +117,8 @@ const classesTableBody = document.querySelector("#classesTable tbody");
 const filterTeacher = document.getElementById("filterTeacher");
 const filterSubject = document.getElementById("filterSubject");
 const filterGroup = document.getElementById("filterGroup");
+const editClassId = document.getElementById("editClassId");
+const cancelEditBtn = document.getElementById("cancelEditBtn");
 
 // تحميل المواد والأساتذة
 async function loadSubjectsAndTeachers(){
@@ -136,7 +142,7 @@ async function loadSubjectsAndTeachers(){
   });
 }
 
-// حفظ الحصة
+// حفظ / تعديل الحصة
 classForm.addEventListener("submit", async e=>{
   e.preventDefault();
   const subject = subjectSelect.value;
@@ -152,21 +158,37 @@ classForm.addEventListener("submit", async e=>{
     if(s.group===group){ groupStudents.push({id:snap.id,name:s.name}); }
   });
 
-  await addDoc(collection(db,"classes"),{subject,teacher,group,day,time,students:groupStudents,attendance:[]});
-  alert("تم حفظ الحصة بنجاح");
+  if(editClassId.value){
+    // تعديل الحصة
+    const docRef = doc(db,"classes",editClassId.value);
+    await updateDoc(docRef,{subject,teacher,group,day,time,students:groupStudents});
+    alert("تم تعديل الحصة بنجاح");
+    editClassId.value="";
+  } else {
+    // إضافة حصة جديدة
+    await addDoc(collection(db,"classes"),{subject,teacher,group,day,time,students:groupStudents,attendance:[]});
+    alert("تم حفظ الحصة بنجاح");
+  }
   classForm.reset();
   loadClasses();
 });
 
-// تحميل الحصص مع تطبيق الفلاتر
+// إلغاء التعديل
+cancelEditBtn.addEventListener("click", ()=>{
+  classForm.reset();
+  editClassId.value="";
+});
+
+// تحميل الحصص مع الفلاتر
 async function loadClasses(){
   const snapshot = await getDocs(collection(db,"classes"));
   classesTableBody.innerHTML="";
   snapshot.forEach(docSnap=>{
     const cls = {...docSnap.data(),id:docSnap.id};
-    if( (filterTeacher.value && cls.teacher!==filterTeacher.value) ) return;
-    if( (filterSubject.value && cls.subject!==filterSubject.value) ) return;
-    if( (filterGroup.value && !cls.group.includes(filterGroup.value)) ) return;
+    if(filterTeacher.value && cls.teacher!==filterTeacher.value) return;
+    if(filterSubject.value && cls.subject!==filterSubject.value) return;
+    if(filterGroup.value && !cls.group.includes(filterGroup.value)) return;
+
     const tr = document.createElement("tr");
     tr.innerHTML=`
       <td>${cls.subject}</td>
@@ -174,7 +196,10 @@ async function loadClasses(){
       <td>${cls.group}</td>
       <td>${cls.day}</td>
       <td>${cls.time}</td>
-      <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+      <td>
+        <button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button>
+        <button class="btn" onclick="editClass('${cls.id}')">✏️ تعديل</button>
+      </td>
     `;
     classesTableBody.appendChild(tr);
   });
@@ -188,7 +213,21 @@ window.deleteClass = async id=>{
   }
 }
 
-// تطبيق الفلاتر تلقائياً عند التغيير
+// تعديل حصة
+window.editClass = async id=>{
+  const docSnap = await getDocs(collection(db,"classes"));
+  const cls = docSnap.docs.find(d=>d.id===id)?.data();
+  if(cls){
+    subjectSelect.value = cls.subject;
+    teacherSelect.value = cls.teacher;
+    document.getElementById("groupInput").value = cls.group;
+    document.getElementById("daySelect").value = cls.day;
+    document.getElementById("timeInput").value = cls.time;
+    editClassId.value = id;
+  }
+}
+
+// تطبيق الفلاتر
 filterTeacher.addEventListener("change", loadClasses);
 filterSubject.addEventListener("change", loadClasses);
 filterGroup.addEventListener("input", loadClasses);
